--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,16 @@
   <%= @post.content %>
 </p>
 
+<h2>Comments</h2>
+<table>
+	<tr><th>Commenter</th>
+    	<th>Comment</th></tr>
+	<%= render @post.comments %>
+</table>
+
+<h2>Add a comment:</h2>
+<%= render "comments/form" %>
+
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
